# localex

./: Cargo.toml  Makefile  README.md  uniffi.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/io/ckaznable/localax/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/ckaznable/localax/: LocalaxService.kt  LocalaxServiceEvent.kt  Localex.kt  MainActivity.kt  SecureByteArrayStorage.kt
android/app/src/main/java/io/ckaznable/localax/localex/: ClientEvent.kt  DaemonEvent.kt  DaemonPeer.kt  VerifyState.kt
android/app/src/main/java/io/ckaznable/localax/rust/: localax.kt
android/app/src/main/java/io/ckaznable/localax/ui/model/: MainViewModel.kt
android/app/src/main/java/io/ckaznable/localax/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/io/ckaznable/localax/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
database/: Cargo.toml
database/entity/: Cargo.toml
database/entity/src/: mod.rs  prelude.rs  regist_file.rs
database/migration/: Cargo.toml
database/migration/src/: m20220101_000001_create_table.rs
database/src/: lib.rs  main.rs
examples/send-file/: Cargo.toml
examples/send-file/src/: main.rs
src/: behaviour.rs  cli.rs  logger.rs  main.rs  protocol.rs  secret.rs  tui.rs
src/tui/: incomming_verify.rs  peers.rs
