[workspace]
resolver = "2"
members = [
  "packages/android",
  "packages/common",
  "packages/localex",
  "packages/localex-daemon",
  "packages/localex-gui",
  "packages/localex-ipc",
  "packages/localex-tui",
  "packages/logger",
  "packages/network",
  "packages/protocol",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
