[workspace]
resolver = "2"
members = [
  "database",
  "database/entity",
  "database/migration",
  "packages/android",
  "packages/common",
  "packages/localex-daemon",
  "packages/localex-gui",
  "packages/localex-ipc",
  "packages/localex-tui",
  "packages/logger",
  "packages/network",
  "packages/protocol",
  "packages/uniffi-bindgen",
]
exclude = [
  "examples/send-file",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
