[package]
name = "send-file"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../packages/common" }
localex-ipc = { path = "../../packages/localex-ipc" }
anyhow = "1.0.86"
ratatui = "0.28.0"
tokio = { version = "1.39.2", features = ["full"] }
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
futures = "0.3.21"
md5 = "0.7.0"
rand = { version = "0.8.5", features = ["small_rng"] }
clap = { version = "4.5.16", features = ["derive"] }
